syntax = "proto3";

import "google/protobuf/timestamp.proto";


option go_package = "pb/worker";


message Stats {
  int32 hashrate = 1;
  google.protobuf.Timestamp running_since = 2;
  float cpu = 3;
  float ram = 4;
  float storage = 5;
  int32 power = 6;
  repeated GPU gpus = 7;
}

message GPU {
  int32 pci = 1;
  string name = 2;
  float load = 3;
  int32 chip = 4;
  int32 memory = 5;
  int32 hashrate = 6;
  int32 fan = 7;
  int32 core_clock = 8;    
  int32 mem_clock = 9;
  int32 power = 10;
  int32 accepted_shares = 11;
  int32 rejected_shares = 12;
}

message ReportStatsRequest {
  string worker = 1;
  Stats stats = 2;
}

message ReportStatsResponse {}

service Worker {
  rpc ReportStats(ReportStatsRequest) returns (ReportStatsResponse) {}
}